# bevy_magic_fx

./: .gitignore  Cargo.toml  README.md  TODO.md  rust-toolchain.toml
assets/assets_staging/: masks for particles 3.rar
assets/assets_staging/vfx_explosion_files/aseprite_files_96x96/: vfx_explosion.aseprite
assets/assets_staging/vfx_explosion_files/gif_files_96x96/: Thumbs.db
assets/assets_staging/vfx_explosion_files/sprite_sheets_96x96/: Thumbs.db
assets/assets_staging/vfx_hit_impact/aseprite_files_96x96/: vfx_hit_effects.aseprite
assets/magic_fx_variants/: explosion_simple.magicfx.ron  fire_behind.magicfx.ron  fire_hit.magicfx.ron  glowy_corona.magicfx.ron  heart.magicfx.ron  impact1.magicfx.ron  light_flash.magicfx.ron  light_sparkles.magicfx.ron  light_sphere.magicfx.ron  magic.magicfx.ron  portal_1.magicfx.ron  shield_blue.magicfx.ron  shield_blue_2.magicfx.ron  simple_beam.magicfx.ron  smoke_poof.magicfx.ron  spellcast1.magicfx.ron  sword_enchantment.magicfx.ron  sword_slash_horizontal_1.magicfx.ron  waterfall.magicfx.ron
assets/magic_fx_variants/wip/: shadow_helix.magicfx.ron  skull_sparkles.magicfx.ron  soul_fire.magicfx.ron
assets/materialize_defs/: beam.material.toml  portal_1.material.toml
assets/meshes/: mesh_projectile.glb  mesh_vortex.glb  projectile.mtl
assets/models/: rpg_dagger_03.glb  rpg_dagger_03.gltf  rpg_sword_07.glb
assets/shader_variants/: beam.shadvar.ron  blast.shadvar.ron  circle_02.shadvar.ron  corona_blue.shadvar.ron  dirt_1.shadvar.ron  explosion_1.shadvar.ron  explosion_smoke_1.shadvar.ron  fire_behind.shadvar.ron  fire_medium.shadvar.ron  grad_01.shadvar.ron  heart_02.shadvar.ron  impact_1.shadvar.ron  light_01.ron  light_01.shadvar.ron  light_02.shadvar.ron  light_03.shadvar.ron  light_sparks.shadvar.ron  lightning_01.shadvar.ron  magic_01.shadvar.ron  portal_1.shadvar.ron  purple.shadvar.ron  shadow_bluegreen.shadvar.ron  shadow_skull.shadvar.ron  smoke_cloud_1.shadvar.ron  smoke_streak_1.shadvar.ron  soul_circle.shadvar.ron  soul_core.shadvar.ron  soul_fire_particle.shadvar.ron  sword_enchantment.shadvar.ron  sword_enchantment2.shadvar.ron  sword_slash_1.shadvar.ron  water.shadvar.ron
assets/shaders/: magic_fx.wgsl  scrolling.wgsl
assets/textures/diffuse_noise/: bluegreen_1.TGA  bluegreen_2.TGA
examples/: basic.rs  enchantment.rs  preview.rs  showcase.rs  waterfall.rs  wip.rs
src/: animated_material.rs  camera.rs  custom_material copy.rs  custom_material.rs  enchantment.rs  euler_transform.rs  interpolation.rs  lib.rs  magic_fx.rs  magic_fx_beam.rs  magic_fx_variant.rs  magicfx_material.rs  main.rs  rotate_to.rs  shader_variant.rs  util.rs
src/shaders/: magic_fx.wgsl
(+6 files in other folders)
