[package]
name = "bevy_magic_fx"
version = "0.3.2"
license = "MIT"
description = "Define mesh-based vfx in serialized files"
edition = "2021" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["tga"] }
bevy_obj = "0.13"

bevy_common_assets = { version = "0.10", features = ["ron", "toml"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8.1"


[[example]]
name = "basic"
path = "examples/basic.rs"


[[example]]
name = "waterfall"
path = "examples/waterfall.rs"

[[example]]
name = "showcase"
path = "examples/showcase.rs"