[package]
name = "bevy_magic_fx"
 
version = "0.16.0"
 
license = "MIT"
description = "Define mesh-based vfx in serialized files"
edition = "2024" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.16.0", features=["tga","png"] }

# bevy = { version = "0.15.0", features = ["tga"] }
bevy_obj = {version = "0.16" , features =["mesh"], default-features= false }
 
bevy_common_assets = { version = "0.12", features = ["ron", "toml"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8.1"
 
bevy_materialize = {version="0.5.1"   }

# bevy_shader_utils = "0.7.0"


[[example]]
name = "basic"
path = "examples/basic.rs"


[[example]]
name = "waterfall"
path = "examples/waterfall.rs"


[[example]]
name = "preview"
path = "examples/preview.rs"


[[example]]
name = "showcase"
path = "examples/showcase.rs"




[[example]]
name = "wip"
path = "examples/wip.rs"


 
